k8s/manifests/apps/syncthing/syncthing.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: syncthing
  labels:
    gateway.infra.services/allow-routes: "true"
    pod-security.kubernetes.io/enforce: restricted
    prometheus.io/scrape: "true"
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: syncthing
spec:
  replicas: 1
  template:
    spec:
      automountServiceAccountToken: false
      hostUsers: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
      containers:
        - name: syncthing
          image: syncthing/syncthing:2.1.6
          args:
            - --home=
            - --config=/var/syncthing/config
            - --data=/var/syncthing/data
            - --gui-address=[$(POD_IP)]:8384
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          ports:
            - name: tcp
              containerPort: 22000
              protocol: TCP
            - name: udp
              containerPort: 22000
              protocol: UDP
            - name: web
              containerPort: 8384
          livenessProbe:
            httpGet:
              path: /rest/noauth/health
              port: web
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /rest/noauth/health
              port: web
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: config-dir
              mountPath: /var/syncthing/config
            - name: data-dir
              mountPath: /var/syncthing/data
            - name: synced-shared
              mountPath: /var/syncthing/synced-shared
            - name: synced-obsidian
              mountPath: /var/syncthing/synced-obsidian
            - name: tmp
              mountPath: /tmp
            # These can be generated with `syncthing generate`:
            - name: config
              mountPath: /var/syncthing/config/config.xml
              subPath: config.xml
              readOnly: true
            - name: device-key
              mountPath: /var/syncthing/config/cert.pem
              subPath: tls.crt
              readOnly: true
            - name: device-key
              mountPath: /var/syncthing/config/key.pem
              subPath: tls.key
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              memory: 500Mi
      volumes:
        - name: config-dir
          emptyDir:
            sizeLimit: 50Mi
        - name: data-dir
          emptyDir:
            sizeLimit: 5Gi
        - name: synced-shared
          persistentVolumeClaim:
            claimName: synced-shared-data
        - name: synced-obsidian
          persistentVolumeClaim:
            claimName: synced-obsidian-data
        - name: config
          configMap:
            name: config
        - name: tmp
          emptyDir:
            sizeLimit: 500Mi
        - name: device-key
          secret:
            secretName: device-key
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing
spec:
  ports:
    - port: 22000
      targetPort: tcp
      name: tcp
      protocol: TCP
    - port: 22000
      targetPort: udp
      name: udp
      protocol: UDP
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: syncthing
  labels:
    external-dns: "true"
spec:
  parentRefs:
    - name: services
      namespace: infra
      sectionName: syncthing
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: syncthing
          port: 22000
